# tg-session-keeper

./: .darglint  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-tests.txt  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  tests.yml
pyi/: keeper.py  keeper.spec  requirements.txt
session_keeper/: __init__.py  __main__.py  cli.py  keeper.py  session.py  storage.py  utils.py
session_keeper/keeper/: __init__.py  base.py  cli.py
session_keeper/repositories/: __init__.py  abc.py  e_bin.py  e_json.py  errors.py
session_keeper/storage/: __init__.py  abstract.py  ejs.py  exceptions.py  memory.py
tests/: conftest.py  e_json.tgsk  test_bin_repo.py  test_cli_app.py  test_json_repo.py  test_keeper.py  test_session.py  test_storage.py
tests/storage/: test_ejs.py  test_memory.py
