[tool.poetry]
name = "tg-session-keeper"
version = "0.1.2"
description = "Консольная утилита для хранения Telegram-сессий."
authors = ["Dmitry Davis <dmitrydavis@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DavisDmitry/tg-session-keeper"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities"
]
packages = [
    { include = "session_keeper" }
]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^3.4.7"
tabulate = "^0.8.9"
Telethon = "^1.21.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.0"

[tool.poetry.scripts]
session-keeper = "session_keeper:CLIKeeper.run"

[tool.black]
line-length = 79
target-version = ["py37"]

[tool.isort]
profile = "black"
src_paths = ["session_keeper", "tests"]
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
