[tool.poetry]
name = "tg-session-keeper"
version = "0.1.2"
description = "CLI utility for keeping Telegram sessions."
authors = ["Dmitry Davis <dmitrydavis@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DavisDmitry/tg-session-keeper"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities"
]
packages = [{ include = "session_keeper" }]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^36.0.1"
Pyrogram = "^1.4.7"
prompt-toolkit = "^3.0.28"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
pylint = "^2.12.2"
types-tabulate = "^0.8.5"
darglint = "^1.8.1"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
session-keeper = "session_keeper:CLIKeeper.run"

[tool.black]
target-version = ["py37"]

[tool.isort]
profile = "black"
src_paths = ["session_keeper"]
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = "True"

[tool.pylint.message_control]
disable = ["C0114", "C0115", "C0116"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
